--- a/banner3.html
+++ b/banner3.html
@@ -4,13 +4,11 @@
       <meta charset="UTF-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <link rel="icon" type="image/x-icon" href="./img/logo/logo.png">
       <!-- Font Awesome -->
       <script src="https://kit.fontawesome.com/e48d166edc.js" crossorigin="anonymous"></script>
+      <link rel="icon" type="image/x-icon" href="./img/logo/logo.png">
       <!-- Css -->
       <!-- <link rel="stylesheet" href="style.css"> -->
-      <link rel="stylesheet" href="font-awesome copy/css/font-awesome.min.css">
-      <title>REVO - Banner</title>
       <style>
          /* coding with nick */
          @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
@@ -37,14 +35,15 @@
          left: 0;
          width: 100%;
          height: 100vh;
-         /* background-color: rgba(0, 0, 0, 0.7); */
-         /*   z-index:  -1; */
+         background-color: rgba(0, 0, 0, 0.7);
+         z-index:  -1;
          }
          .slider-container{
          height: 70vh;
          width: 70vw;
          position: relative;
-         /* overflow: hidden; */
+         overflow: hidden;
+         box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px  rgba(0, 0, 0, 0.23);
          }
          .slide{
          opacity: 0;
@@ -52,12 +51,11 @@
          width: 100vw;
          background-position: center center;
          background-size: cover;
-         /* position: absolute; */
          position: absolute;
          top: -15vh;
          left: -15vw;
-         /*   transition: 0.4s ease;
-         z-index: 1; */
+         transition: 0.4s ease;
+         z-index: 1;
          }
          .slide.active{
          opacity: 1;
@@ -68,7 +66,7 @@
          color: #fff;
          padding: 20px;
          font-size: 30px;
-         border: 2px solid transparent;
+         border: 2px solid orange;
          top: 50%;
          transform: translateY(-50%);
          cursor: pointer;
@@ -77,12 +75,13 @@
          outline: 0;
          }
          .left-arrow{
-         left: calc(15vw - 200px);
+         left: calc(15vw - 65px);
          }
          .right-arrow{
-         right: calc(15vw - 200px);
+         right: calc(15vw - 65px);
          }
       </style>
+      <title>REVO - Banner</title>
    </head>
    <body>
       <div class="slider-container">
@@ -92,16 +91,14 @@
          <div class="slide" style="background-image: url('img/exemplo/4.jpg');"></div>
          <div class="slide" style="background-image: url('img/exemplo/5.jpg');"></div>
          <div class="slide" style="background-image: url('img/exemplo/6.jpg');"></div>
-         <div class="slide" style="background-image: url('img/exemplo/azul.png');"></div>
-         <div class="slide" style="background-image: url('img/exemplo/verde.png');"></div>
-         <div class="slide" style="background-image: url('img/exemplo/vermelho.png');"></div>
          <button class="arrow left-arrow" id="left">
-         <i class="fa fa-solid fa-chevron-left fa-2x"></i>
+         <i class="fas fa-arrow-left"></i>
          </button>
          <button class="arrow right-arrow" id="right">
-         <i class="fa fa-solid fa-chevron-right fa-2x"></i>
+         <i class="fas fa-arrow-right"></i>
          </button>
       </div>
+      <!-- <script src="script.js"></script> -->
       <script>
          // coding with nick
          
