--- a/banner2.html
+++ b/banner2.html
@@ -13,9 +13,7 @@
       <style>
          /* coding with nick */
          @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
-         *{
-         box-sizing: border-box;
-         }
+
          body{
          font-family: 'Roboto' , sans-serif;
          display: flex;
@@ -23,7 +21,7 @@
          align-items: center;
          justify-content: center;
          height: 100vh;
-         overflow: hidden;
+        /*  overflow: hidden; */
          margin: 0;
          background-position: center center;
          background-size: cover;
@@ -45,42 +43,39 @@
          position: relative;
          /* overflow: hidden; */
          }
+         .slider-container-sm{
+         position: relative;
+         top: 0vh;
+         left: 0vh;
+         }
+
          .slide{
          opacity: 0;
-         height: 100vh;
-         width: 100vw;
          background-position: center center;
          background-size: cover;
          /* position: absolute; */
-         position: absolute;
-         top: -15vh;
-         left: -15vw;
          /*   transition: 0.4s ease;
          z-index: 1; */
+
          }
          .slide.active{
          opacity: 1;
+         position: absolute;
+         height: 100vh;
+         width: 100vw;
+         top: -15vh;
+         left: -15vw;
+
          }
-         .arrow{
-         position: fixed;
-         background-color: transparent;
-         color: #fff;
-         padding: 20px;
-         font-size: 30px;
-         border: 2px solid transparent;
-         top: 50%;
-         transform: translateY(-50%);
-         cursor: pointer;
+         .slide.sm{
+
+            opacity: 1;
+            height: 100%;
+            width: 100%;
+            margin-left: auto;
+            margin-right: auto;
          }
-         .arrow:focus{
-         outline: 0;
-         }
-         .left-arrow{
-         left: calc(15vw - 200px);
-         }
-         .right-arrow{
-         right: calc(15vw - 200px);
-         }
+
       </style>
    </head>
    <body>
@@ -89,6 +84,9 @@
          <div class="slide active" style="background-image: url('img/2.jpg');"></div>
          <div class="slide active" style="background-image: url('img/3.jpg');"></div>
       </div>
+      <dic class="slider-container-sm">
+         <div class="slide sm" style="background-image: url('img/4.jpg'); width: 1080px; height: 1080px; "></div>
+      </dic>
       <script>
          let slideIndex = 0;
          showSlides();
